--- a/slot_oyunu2/style.css
+++ b/slot_oyunu2/style.css
@@ -105,7 +105,7 @@ header {
 
 .character-display {
     width: 100px; /* Karakterlerin genişliği */
-    height: 380px; /* Makara yüksekliğine yakın */
+    height: calc(80px * 3 + 20px); /* Makara yüksekliğine uyumlu + padding */
     background-color: #444; /* Placeholder renk */
     color: #bbb;
     display: flex;
